# Nidus

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
docs/: Modular-RAG实现说明.md  Modular-RAG计划.md  RAG演进阶段101.md  nidus_overview.md
src/: __init__.py  api.py  bm25.py  chunker.py  config.py  dedup.py  embedder.py  generator.py  graph.py  llm.py  loader.py  main.py  pipeline.py  retriever.py  store.py
src/nidus/: __init__.py  cli.py  config.py  ingest.py  models.py  prompts.py  schemas.py  service.py  vectorstore.py
src/nidus/api/: __init__.py  app.py  routes.py
src/nidus/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/nodes/: __init__.py  context_process.py  generate.py  query_transform.py  rank.py  retrieve.py  router.py  web_search.py
static/: index.html
tests/: conftest.py  test_api.py  test_bm25.py  test_config.py  test_dedup.py  test_graph.py  test_ingest.py  test_router.py
