[project]
name = "nidus"
version = "0.1.0"
description = "Light Extensible Agentic RAG"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=2.45.0",
    "pypdf>=6.14.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.51.0",
    "duckduckgo-search>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
