[project]
name = "nidus"
version = "1.0.0"
description = "Light Extensible Agentic RAG built on LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.3,<2",
    "langchain-text-splitters>=1.1,<2",
    "langchain-community>=0.4,<1",
    "langchain-qdrant>=1.1,<2",
    "qdrant-client>=1.18,<2",
    "fastapi>=0.139,<1",
    "uvicorn[standard]>=0.51,<1",
    "sse-starlette>=3.4,<4",
    "typer>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.14,<3",
    "pypdf>=6,<7",
    "python-dotenv>=1,<2",
]

[project.scripts]
nidus = "nidus.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nidus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]
